[FIX] website_event_track_[session|live]: adjust event 'Youtube' layouts
This commit makes some minor changes to the Youtube video & chat layouts when
embedded in an event to ensure a better viewing experience.

Changes in details:
- Improve the "chat tab" to ensure the width is sufficient to display all of
  the Youtube chat iframe on any resolution ;
- If the video is "live" and has a chat tab, the chat is now displayed as the
  first tab (before this change, the "other tracks" tab was always displayed
  first) ;
- When displaying the next suggestion, add a covering block to avoid a
  potential flicker while fetching the suggestion to go to.

Task 2345887

--- a/addons/website_event_track_session/static/src/scss/event_track_templates.scss
+++ b/addons/website_event_track_session/static/src/scss/event_track_templates.scss
@@ -44,11 +44,11 @@
         .o_wesession_track_main {
             // Force side panel min-width to account for potential Youtube chat
             // And adapt main panel max-width accordingly.
-            @include media-breakpoint-up(xl) {
+            @include media-breakpoint-up(md) {
                 max-width: calc(100% - 22rem);
             }
 
-            @media screen and (min-width: 1400px) {
+            @media screen and (min-width: 1900px) {
                 // return to bootstrap value for col-lg-9 / 10 breakpoint if screen is big enough
                 &.col-lg-9 {
                     max-width: 75%;
@@ -63,11 +63,11 @@
         // Left panel: other tracks
         .o_wesession_track_aside {
             // Force side panel min-width to account for potential Youtube chat
-            @include media-breakpoint-up(xl) {
+            @include media-breakpoint-up(md) {
                 min-width: 22rem;
             }
 
-            @media screen and (min-width: 1400px) {
+            @media screen and (min-width: 1900px) {
                 min-width: auto;
             }
 
